<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UrProfile">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="87dp"
        android:layout_marginBottom="200dp"
        android:background="#9E0E40"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.011">

        <TextView
            android:id="@+id/urprofile"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="0"
            android:gravity="center"
            android:text="@string/Profile"
            android:textColor="#ffffff"
            android:textSize="30sp" />

    </LinearLayout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="6dp"
            android:background="#ffffff"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/name"
                android:layout_width="86dp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:gravity="center"
                android:text="@string/first_name"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/blanc3"
                android:layout_width="173dp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:gravity="center"
                android:text=""
                android:textSize="18sp" />

            <Button
                android:id="@+id/signup"
                android:layout_width="89dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:text="@string/modify"
                tools:text="@string/modify"
                android:background="@color/pourpre"
                android:textColor="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="6dp"
            android:background="#ffffff"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/fname"
                android:layout_width="125dp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:gravity="center"
                android:text="@string/last_name"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/blanc4"
                android:layout_width="136dp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:gravity="center"
                android:text=""
                android:textSize="18sp" />

            <Button
                android:id="@+id/button4"
                android:layout_width="89dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/modify"
                tools:text="@string/modify"
                android:background="@color/pourpre"
                android:textColor="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="6dp"
            android:background="#ffffff"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/email"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:gravity="center"
                android:text="@string/email"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/blanc5"
                android:layout_width="170dp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:gravity="center"
                android:text=""
                android:textSize="18sp" />

            <Button
                android:id="@+id/button5"
                android:layout_width="89dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/modify"
                tools:text="@string/modify"
                android:background="@color/pourpre"
                android:textColor="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="6dp"
            android:background="#ffffff"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/location"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:gravity="center"
                android:text="@string/location"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/blanc6"
                android:layout_width="160dp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:gravity="center"
                android:text=""
                android:textSize="18sp" />

            <Button
                android:id="@+id/button6"
                android:layout_width="89dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/modify"
                tools:text="@string/modify"
                android:background="@color/pourpre"
                android:textColor="@color/white"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="6dp"
            android:background="#ffffff"
            android:orientation="horizontal">


            <Switch
                android:id="@+id/switch1"
                android:layout_width="338dp"
                android:layout_height="50dp"
                android:layout_weight="0"
                android:text="Notification"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="6dp"
            android:background="#ffffff"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/password"
                android:layout_width="116dp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:gravity="center"
                android:text="@string/Password"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/blanc7"
                android:layout_width="144dp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:gravity="center"
                android:text=""
                android:textSize="18sp" />

            <Button
                android:id="@+id/button7"
                android:layout_width="89dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/modify"
                tools:text="@string/modify"
                android:background="@color/pourpre"
                android:textColor="@color/white"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="6dp"
            android:background="#ffffff"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/description"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:gravity="center"
                android:text="Description"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/blanc8"
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:gravity="center"
                android:text=""
                android:textSize="18sp" />

            <Button
                android:id="@+id/button8"
                android:layout_width="89dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/modify"
                tools:text="@string/modify"
                android:background="@color/pourpre"
                android:textColor="@color/white"/>

        </LinearLayout>


    </LinearLayout>
    <Button
        android:id="@+id/button_menuP"
        android:layout_width="394dp"
        android:layout_height="0dp"
        android:background="@color/pourpre"
        android:text="Menu"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />
</android.support.constraint.ConstraintLayout>